# delfos-mcp-server

./: .gitignore  Readme.md  delfos_mcp.py  host.json  oryx-manifest.toml  pyproject.toml  requirements.txt
infra/: main.bicep
